--- a/stylesheet.css
+++ b/stylesheet.css
@@ -94,6 +94,13 @@ heading {
   font-size: 14px;
 }
 
+hr
+{
+	border: 0;
+	height: 1px;
+	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
 papertitle {
   font-family: 'Nunito', Verdana, Helvetica, sans-serif;
   font-size: 14px;
