--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,6 +101,12 @@ hr
 	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
+hr.year_hr
+{
+	width:200%;
+	margin:0px;
+}
+
 papertitle {
   font-family: 'Nunito', Verdana, Helvetica, sans-serif;
   font-size: 14px;
